--- a/src/SocialSmith/SocialSmith.csproj
+++ b/src/SocialSmith/SocialSmith.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C05C8420-9948-493C-BB0B-096482BE33C0}</ProjectGuid>
+    <ProjectGuid>{AA7976AD-35C4-40B7-A9CC-F9C4BA75DA88}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SocialSmith.ActivityStreams</RootNamespace>
-    <AssemblyName>SocialSmith.ActivityStreams</AssemblyName>
+    <RootNamespace>SocialSmith</RootNamespace>
+    <AssemblyName>SocialSmith</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,9 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\SolutionInfo.cs">
-      <Link>Properties\SolutionInfo.cs</Link>
-    </Compile>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
